creusot/tests/should_fail/diagnostics/neg_unimplemented.stderr
error[E0277]: cannot apply unary operator `-` to type `i32`
 --> neg_unimplemented.rs:8:6
  |
8 |     -x
  |     -^
  |     ||
  |     |cannot apply unary operator `-` in logic
  |     required by a bound introduced by this call
  |
  = help: the trait `creusot_contracts::logic::ops::NegLogic` is not implemented for `i32`
  = help: the trait `creusot_contracts::logic::ops::NegLogic` is implemented for `creusot_contracts::Int`

error[E0277]: cannot apply unary operator `-` to type `i32`
 --> neg_unimplemented.rs:8:5
  |
8 |     -x
  |     ^^ cannot apply unary operator `-` in logic
  |
  = help: the trait `creusot_contracts::logic::ops::NegLogic` is not implemented for `i32`
  = help: the trait `creusot_contracts::logic::ops::NegLogic` is implemented for `creusot_contracts::Int`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
